--- a/src/app/places/offers/offer-item/offer-item.component.html
+++ b/src/app/places/offers/offer-item/offer-item.component.html
@@ -1,15 +1,15 @@
-<ion-item padding [routerLink]="['/','places','tabs','offers',offer?.id]">
+<ion-item padding [routerLink]="['/','places','tabs','offers',offer.id]">
   <ion-thumbnail slot="start">
-    <ion-img [src]="offer?.imageUrl"></ion-img>
+    <ion-img [src]="offer.imageUrl"></ion-img>
   </ion-thumbnail>
   <ion-label>
-    <h1>{{offer?.title}}</h1>
+    <h1>{{offer.title}}</h1>
     <div class="offer-details">
       <ion-icon name="calendar"></ion-icon>
-      <ion-text color="primary" class="space-left"> {{ getDummyDate() | date}}</ion-text>
+      <ion-text color="primary" class="space-left"> {{ offer.avaiableFrom | date}}</ion-text>
       <span class="space-left">to</span>
       <ion-icon name="calendar"></ion-icon>
-      <ion-text class="space-left" color="primary"> {{ getDummyDate() | date}}</ion-text>
+      <ion-text class="space-left" color="primary"> {{ offer.availableTo| date}}</ion-text>
     </div>
   </ion-label>
 </ion-item>
