--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -42,21 +42,28 @@
       <ion-segment-button value="all" checked>All Places</ion-segment-button>
       <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
     </ion-segment>
-    <ion-grid>
+    <ion-grid *ngIf="!relevantPlaces || relevantPlaces.length <= 0">
+      <ion-row>
+        <ion-col class="ion-text-center" size="12" sizeSm="8" offsetSm="2">
+          <p>There are no bookable places right now, please come back later!</p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-grid *ngIf="relevantPlaces.length > 0">
       <ion-row>
         <ion-col class="ion-text-center" size="12" sizeSm="8" offsetSm="2">
           <ion-card>
             <ion-card-header>
-              <ion-card-title>{{loadedPlaces[0].title}}</ion-card-title>
-              <ion-card-subtitle>{{loadedPlaces[0].price | currency}} / Night</ion-card-subtitle>
+              <ion-card-title>{{relevantPlaces[0].title}}</ion-card-title>
+              <ion-card-subtitle>{{relevantPlaces[0].price | currency}} / Night</ion-card-subtitle>
             </ion-card-header>
-            <ion-img [src]="loadedPlaces[0].imageUrl"></ion-img>
+            <ion-img [src]="relevantPlaces[0].imageUrl"></ion-img>
             <ion-card-content>
-              <p>{{loadedPlaces[0].description}}</p>
+              <p>{{relevantPlaces[0].description}}</p>
             </ion-card-content>
             <div>
               <ion-button fill="clear" color="primary"
-                [routerLink]="['/','places','tabs','discover',loadedPlaces[0].id]">More</ion-button>
+                [routerLink]="['/','places','tabs','discover',relevantPlaces[0].id]">More</ion-button>
             </div>
           </ion-card>
         </ion-col>
@@ -64,7 +71,7 @@
       <ion-row>
         <ion-col size="12" size="12" sizeSm="8" offsetSm="2">
           <ion-list>
-            <ion-item *ngFor="let place of loadedPlaces.slice(1)"
+            <ion-item *ngFor="let place of relevantPlaces.slice(1)"
               [routerLink]="['/','places','tabs','discover',place.id]">
               <ion-thumbnail slot="start">
                 <ion-img [src]="place.imageUrl"></ion-img>
