--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -17,12 +17,18 @@
     <ion-grid>
       <ion-row>
         <ion-col size="12" sizeSm="8" offsetSm="2">
-          <ion-list>
+          <div *ngIf="isLoading" class="ion-text-center">
+            <ion-spinner></ion-spinner>
+          </div>
+          <p class="ion-text-center" *ngIf="!isLoading && offers.length <= 0">
+            No offers found! Please create one first
+          </p>
+          <ion-list *ngIf="!isLoading && offers.length > 0">
             <ion-item-sliding *ngFor="let offer of offers">
               <app-offer-item [offer]="offer"></app-offer-item>
               <ion-item-options side="end">
                 <ion-item-option color="secondary" [routerLink]="['/','places','tabs','offers','edit',offer.id]"
-                  (click)="onEdit(offer.id)">
+                  (click)="onEdit(offer.id!)">
                   <ion-icon name="create" slot="icon-only"></ion-icon>
                 </ion-item-option>
               </ion-item-options>
