--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -42,14 +42,24 @@
       <ion-segment-button value="all" checked>All Places</ion-segment-button>
       <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
     </ion-segment>
-    <ion-grid *ngIf="!relevantPlaces || relevantPlaces.length <= 0">
+
+    <ion-grid *ngIf="!isLoading && (!relevantPlaces || relevantPlaces.length <= 0)">
       <ion-row>
         <ion-col class="ion-text-center" size="12" sizeSm="8" offsetSm="2">
           <p>There are no bookable places right now, please come back later!</p>
         </ion-col>
       </ion-row>
     </ion-grid>
-    <ion-grid *ngIf="relevantPlaces.length > 0">
+
+    <ion-grid *ngIf="isLoading">
+      <ion-row>
+        <ion-col class="ion-text-center" size="12" sizeSm="8" offsetSm="2">
+          <ion-spinner color="primary"></ion-spinner>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid *ngIf="!isLoading && relevantPlaces.length > 0">
       <ion-row>
         <ion-col class="ion-text-center" size="12" sizeSm="8" offsetSm="2">
           <ion-card>
