--- a/src/app/places/offers/offer-item/offer-item.component.html
+++ b/src/app/places/offers/offer-item/offer-item.component.html
@@ -1,4 +1,4 @@
-<ion-item padding [routerLink]="['/','places','tabs','offers',offer.id]">
+<ion-item padding>
   <ion-thumbnail slot="start">
     <ion-img [src]="offer.imageUrl"></ion-img>
   </ion-thumbnail>
