--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -23,6 +23,9 @@
         <ion-list>
           <ion-item-sliding *ngFor="let booking of loadedBookings">
             <ion-item>
+              <ion-avatar slot="start">
+                <ion-img [src]="booking.placeImage"></ion-img>
+              </ion-avatar>
               <ion-label>
                 <h5>{{booking.placeTitle}}</h5>
                 <p>Guests: {{booking.guestNumber}}</p>
