from check for image

--- a/src/app/places/offers/new-offer/image-picker/image-picker.component.html
+++ b/src/app/places/offers/new-offer/image-picker/image-picker.component.html
@@ -9,4 +9,4 @@
   </ion-button>
 </div>
 
-<input type="file" #filePicker (change)="onFileChosen($event)">
+<input type="file" accept="image/jpeg" #filePicker (change)="onFileChosen($event)">
