--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>New Offer</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="onCreateOffer()" [disabled]="!form.valid">
+      <ion-button (click)="onCreateOffer()" [disabled]="!form.valid || !this.form.get('image')?.value">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -39,7 +39,7 @@
           </ion-item>
         </ion-col>
       </ion-row>
-      <div >
+      <div>
         <ion-row>
           <ion-col sizeSm="3" offsetSm="3">
             <ion-item>
@@ -47,7 +47,8 @@
               <ion-datetime-button datetime="datetime"></ion-datetime-button>
               <ion-modal [keepContentsMounted]="true">
                 <ng-template>
-                  <ion-datetime presentation="date" id="datetime" min="2024-05-03" max="2025-01-01" formControlName="dateFrom"></ion-datetime>
+                  <ion-datetime presentation="date" id="datetime" min="2024-05-03" max="2025-01-01"
+                    formControlName="dateFrom"></ion-datetime>
                 </ng-template>
               </ion-modal>
             </ion-item>
@@ -58,7 +59,8 @@
               <ion-datetime-button datetime="datetimeto"></ion-datetime-button>
               <ion-modal [keepContentsMounted]="true">
                 <ng-template>
-                  <ion-datetime presentation="date" id="datetimeto" min="2023-05-03" max="2025-01-01" formControlName="dateTo"></ion-datetime>
+                  <ion-datetime presentation="date" id="datetimeto" min="2023-05-03" max="2025-01-01"
+                    formControlName="dateTo"></ion-datetime>
                 </ng-template>
               </ion-modal>
             </ion-item>
