--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>New Offer</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="onCreateOffer()" [disabled]="!form.valid || !this.form.get('image')?.value">
+      <ion-button (click)="onCreateOffer()" [disabled]="!form.valid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -69,7 +69,10 @@
       </div>
       <ion-row>
         <ion-col sizeSm="6" offsetSm="3">
-          <app-image-picker (imagePick)="onImagePicked($event)"></app-image-picker>
+          <ion-item>
+            <ion-label position="floating">Image URL</ion-label>
+            <ion-input type="text" formControlName="imageurl"></ion-input>
+          </ion-item>
         </ion-col>
       </ion-row>
     </ion-grid>
