chaging backend properties

--- a/src/app/places/offers/offer-item/offer-item.component.html
+++ b/src/app/places/offers/offer-item/offer-item.component.html
@@ -9,7 +9,7 @@
       <ion-text color="primary" class="space-left"> {{ offer.avaiableFrom | date}}</ion-text>
       <span class="space-left">to</span>
       <ion-icon name="calendar"></ion-icon>
-      <ion-text class="space-left" color="primary"> {{ offer.availableTo| date}}</ion-text>
+      <ion-text class="space-left" color="primary"> {{ offer.avaiableTo| date}}</ion-text>
     </div>
   </ion-label>
 </ion-item>
